[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "BunCord"
version = "0.0.1"
authors = [
    { name="LittlestFluffy", email="littlestfluffy@dreamcare.cloud" },
]
description = "a multi-purpose Discord bot based on Pycord."
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/DreamcareCloud/BunCorc"
"Bug Tracker" = "https://github.com/DreamcareCloud/BunCorc/issues"
